Изменение админ-панели под страничную навигацию. Создание класса для добавления сериалов и эпизодов, их хранения.

--- a/AnimePortal/AnimePortal/AnimePortal.csproj
+++ b/AnimePortal/AnimePortal/AnimePortal.csproj
@@ -55,19 +55,40 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="AddEpisodePage.xaml.cs">
+      <DependentUpon>AddEpisodePage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="AddSerialPage.xaml.cs">
+      <DependentUpon>AddSerialPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="AdminPage.xaml.cs">
+      <DependentUpon>AdminPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="AdminWindow.xaml.cs">
       <DependentUpon>AdminWindow.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Episode.cs" />
-    <Compile Include="Genre.cs" />
+    <Compile Include="Classes\Episode.cs" />
+    <Compile Include="Classes\Genre.cs" />
     <Compile Include="GuestWindow.xaml.cs">
       <DependentUpon>GuestWindow.xaml</DependentUpon>
     </Compile>
-    <Compile Include="LoginWindow.xaml.cs">
-      <DependentUpon>LoginWindow.xaml</DependentUpon>
+    <Compile Include="LoginPage.xaml.cs">
+      <DependentUpon>LoginPage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Season.cs" />
-    <Compile Include="Serial.cs" />
+    <Compile Include="Classes\Serial.cs" />
+    <Compile Include="SerialMethods.cs" />
+    <Page Include="AddEpisodePage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="AddSerialPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="AdminPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="AdminWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -76,7 +97,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="LoginWindow.xaml">
+    <Page Include="LoginPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
